--- a/build.gradle
+++ b/build.gradle
@@ -19,30 +19,10 @@ dependencies {
     // https://mvnrepository.com/artifact/jstl/jstl
     compile group: 'jstl', name: 'jstl', version: '1.2'
 
-//    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-core
-//    compile group: 'org.springframework.security', name: 'spring-security-core', version: '3.0.8.RELEASE'
-//    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-core
-//    compile group: 'org.springframework.security', name: 'spring-security-config', version: '3.0.8.RELEASE'
-//    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-core
-//    compile group: 'org.springframework.security', name: 'spring-security-web', version: '3.0.8.RELEASE'
-//    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-core
-//    compile group: 'org.springframework.security', name: 'spring-security-taglibs', version: '3.0.8.RELEASE'
-
-
-
     compile "org.springframework.security:spring-security-config:4.1.3.RELEASE"
     compile "org.springframework.security:spring-security-core:4.1.3.RELEASE"
     compile "org.springframework.security:spring-security-web:4.1.3.RELEASE"
     compile "org.springframework.security:spring-security-taglibs:4.1.3.RELEASE"
-//    // https://mvnrepository.com/artifact/org.springframework/spring-aop
-//    compile group: 'org.springframework', name: 'spring-aop', version: '4.3.3.RELEASE'
-//    // https://mvnrepository.com/artifact/org.springframework/spring-jdbc
-//    compile group: 'org.springframework', name: 'spring-jdbc', version: '4.3.3.RELEASE'
-//    // https://mvnrepository.com/artifact/org.springframework/spring-tx
-//    compile group: 'org.springframework', name: 'spring-tx', version: '4.3.3.RELEASE'
-//// https://mvnrepository.com/artifact/org.springframework/spring-expression
-//    compile group: 'org.springframework', name: 'spring-expression', version: '4.3.3.RELEASE'
-
-
-
+    // https://mvnrepository.com/artifact/org.hibernate/hibernate-core
+    compile group: 'org.hibernate', name: 'hibernate-core', version: '5.2.4.Final'
 }
