--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ dependencies {
     compile group: 'org.springframework', name: 'spring-webmvc', version: '4.3.3.RELEASE'
     // https://mvnrepository.com/artifact/jstl/jstl
     compile group: 'jstl', name: 'jstl', version: '1.2'
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.21'
+
 
     compile "org.springframework.security:spring-security-config:4.1.3.RELEASE"
     compile "org.springframework.security:spring-security-core:4.1.3.RELEASE"
@@ -25,4 +28,9 @@ dependencies {
     compile "org.springframework.security:spring-security-taglibs:4.1.3.RELEASE"
     // https://mvnrepository.com/artifact/org.hibernate/hibernate-core
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.2.4.Final'
+    // https://mvnrepository.com/artifact/javax.persistence/persistence-api
+    compile group: 'javax.persistence', name: 'persistence-api', version: '1.0.2'
+
+    // https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa
+    compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '1.10.5.RELEASE'
 }
